# Facelab-CLI

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  requirements.txt
cmake/: README
config/: facelab.conf
libs/: ConvertUTF.cpp  simpleini.hpp  zhelpers.hpp
src/exceptions/: AnalysisErrorException.hpp  ConfigException.hpp  FileNotFoundException.hpp
src/global/: config.cpp  config.hpp  host.hpp
src/input_adapter/: InputAdapter.cpp  InputAdapter.h  InputAdapter.hpp
src/result_adapter/: Face.cpp  Face.hpp  FaceResultAdapter.cpp  FaceResultAdapter.hpp
src/service_client/: FaceAgeGenderStackServiceClient.cpp  FaceAgeGenderStackServiceClient.hpp  ServiceClient.cpp  ServiceClient.hpp
